Fix: ResetPasswordValidator template

--- a/package.json
+++ b/package.json
@@ -53,6 +53,10 @@
           "dest": "Validators/SignUpValidator"
         },
         {
+          "src": "validators/ResetPasswordValidator.txt",
+          "dest": "Validators/ResetPasswordValidator"
+        },
+        {
           "src": "models/Token.txt",
           "dest": "Models/Token"
         }
